--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -474,7 +474,7 @@ Supplementary Information: Statistical evaluations of the implemented methods ca
 }
 
 @Article{rdml-ninja_2015,
-  Title                    = {{RDML-Ninja and RDMLdb for standardized exchange of qPCR data}},
+  Title                    = {{RDML-Ninja} and {RDMLdb} for standardized exchange of {qPCR} data},
   Author                   = {Ruijter, Jan M and Lefever, Steve and Anckaert, Jasper and Hellemans, Jan and Pfaffl, Michael W and Benes, Vladimir and Bustin, Stephen A and Vandesompele, Jo and Untergasser, Andreas and others},
   Journal                  = {BMC Bioinformatics},
   Year                     = {2015},
@@ -553,7 +553,7 @@ efficiency, Quantitative {PCR}},
 }
 
 @Manual{Schutten_2014_ods,
-  Title                    = {readODS: Read ODS files and puts them into data frames},
+  Title                    = {{readODS}: Read {ODS} files and puts them into data frames},
   Author                   = {Gerrit-Jan Schutten},
   Note                     = {R package version 1.4},
   Year                     = {2014},
@@ -635,7 +635,7 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
 }
 
 @Manual{Warnes_2015_gdata,
-  Title                    = {gdata: Various R Programming Tools for Data Manipulation},
+  Title                    = {{gdata}: Various {R} Programming Tools for Data Manipulation},
   Author                   = {Gregory R. Warnes and Ben Bolker and Gregor Gorjanc and Gabor Grothendieck and Ales Korosec and Thomas Lumley and Don MacQueen and Arni Magnusson and Jim Rogers and {others}},
   Note                     = {R package version 2.17.0},
   Year                     = {2015},
@@ -645,11 +645,20 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
 
 @Manual{Wickham_tidyr,
   Title                    = {{tidyr}: Easily Tidy Data with spread() and gather() Functions.},
-  Author                   = {Hadley Wickham},
+  Author                   = {'Hadley Wickham'},
   Note                     = {R package version 0.2.0},
   Year                     = {2014},
 
   Url                      = {http://CRAN.R-project.org/package=tidyr}
+}
+
+@Manual{Wickham_assertthat,
+  Title                    = {{assertthat}: Easy pre and post assertions.},
+  Author                   = {'Hadley Wickham'},
+  Note                     = {R package version 0.1},
+  Year                     = {2013},
+
+  Url                      = {http://CRAN.R-project.org/package=assertthat}
 }
 
 @Article{Wickham_plyr,
@@ -671,15 +680,6 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Year                     = {2015},
 
   Url                      = {http://CRAN.R-project.org/package=dplyr}
-}
-
-@Manual{Wickham_assertthat,
-  Title                    = {assertthat: Easy pre and post assertions.},
-  Author                   = {'Hadley Wickham'},
-  Note                     = {R package version 0.1},
-  Year                     = {2013},
-
-  Url                      = {http://CRAN.R-project.org/package=assertthat}
 }
 
 @Article{wittwer_high-resolution_2009,
