--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -645,7 +645,7 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
 
 @Manual{Wickham_tidyr,
   Title                    = {{tidyr}: Easily Tidy Data with spread() and gather() Functions.},
-  Author                   = {'Hadley Wickham'},
+  Author                   = {Hadley Wickham},
   Note                     = {R package version 0.2.0},
   Year                     = {2014},
 
@@ -654,7 +654,7 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
 
 @Manual{Wickham_assertthat,
   Title                    = {{assertthat}: Easy pre and post assertions.},
-  Author                   = {'Hadley Wickham'},
+  Author                   = {Hadley Wickham},
   Note                     = {R package version 0.1},
   Year                     = {2013},
 
@@ -702,4 +702,21 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Url                      = {http://onlinelibrary.wiley.com/doi/10.1002/humu.20951/abstract},
   Urldate                  = {2014-09-11}
 }
+
+  @Manual{Mersmann_2014_microbenchmark,
+    title = {{microbenchmark}: Accurate Timing Functions},
+    author = {Olaf Mersmann, Claudia Beleites, Rainer Hurling and Ari Friedman},
+    year = {2014},
+    note = {R package version 1.4-2},
+    url = {http://CRAN.R-project.org/package=microbenchmark},
+  }
+
+  @Manual{Radford_2014_microbenchmark,
+    title = {Inaccurate results from microbenchmark},
+    author = {Neal Radford},
+    year = {2014},
+    note = {https://web.archive.org/web/20140823221902/http://www.r-bloggers.com/inaccurate-results-from-microbenchmark/},
+    url = {https://web.archive.org/web/20140823221902/http://www.r-bloggers.com/inaccurate-results-from-microbenchmark/},
+  }
+
 
