--- a/vignettes/CreateRDML.Rmd
+++ b/vignettes/CreateRDML.Rmd
@@ -316,9 +316,11 @@ To save our **RDML** object as file we can use `$AsXML()` method with file name 
 
 *Note that currently due to limits of `XML` package it is rather slow operation!!!*
 
-## Benchmark of the RDML structure
+XML files can be compressed to save sapce. The **RMDL** package uses the `zip()` function from the **utils** package with default values to compress the RDML file. Therefore, the compression mode depends on the operating system. The **RDML** function `AsXML()` without an argument returns one string, which contians the XML data. This can be used to compress it with any other compression algorithm.
 
-A limitation of RMDL is the process of file generation. This characteristic is inherited by the **RDML** package. Speed is an issue in high-throughput applications. To give the user a foundation for a decision if the implementation of the RMDL format is advisable we performed a benchmark.
+## Benchmark of the RDML generation
+
+XML becomes less efficient to work with at larger file sizes and complexer structured information (e.g., matrices). Therefore, a limitation of RMDL is the process of file generation. This characteristic is inherited by the **RDML** package. Speed is an issue in high-throughput applications. To give the user a foundation for a decision if the implementation of the RMDL format is advisable we performed a benchmark. We used the **microbenchmark** package [@Mersmann_2014_microbenchmark, @Radford_2014_microbenchmark] to assess the time required for generation of RDML files. The simulation included datasets with ranging from 1 to 1000 entries per file.
 
 ## Conclusion
 
