--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -359,14 +359,18 @@ Our comprehensive survey showed that most tools use their own file format and on
   Volume                   = {7}
 }
 
-@Article{roediger2015chippcr,
-  Title                    = {{chipPCR: an R package to pre-process raw data of amplification curves}},
-  Author                   = {R{\"o}diger, Stefan and Burdukiewicz, Micha{\l} and Schierack, Peter},
-  Journal                  = {Bioinformatics},
-  Year                     = {2015},
-  Pages                    = {btv205},
-
-  Publisher                = {Oxford Univ Press}
+@article{roediger2015chippcr,
+author = {R{\"o}diger, Stefan and Burdukiewicz, Micha{\l} and Schierack, Peter}, 
+title = {{chipPCR: an R package to pre-process raw data of amplification curves}},
+volume = {31}, 
+number = {17}, 
+pages = {2900-2902}, 
+year = {2015}, 
+doi = {10.1093/bioinformatics/btv205}, 
+abstract ={Motivation: Both the quantitative real-time polymerase chain reaction (qPCR) and quantitative isothermal amplification (qIA) are standard methods for nucleic acid quantification. Numerous real-time read-out technologies have been developed. Despite the continuous interest in amplification-based techniques, there are only few tools for pre-processing of amplification data. However, a transparent tool for precise control of raw data is indispensable in several scenarios, for example, during the development of new instruments.Results: chipPCR is an R package for the pre-processing and quality analysis of raw data of amplification curves. The package takes advantage of R’s S4 object model and offers an extensible environment. chipPCR contains tools for raw data exploration: normalization, baselining, imputation of missing values, a powerful wrapper for amplification curve smoothing and a function to detect the start and end of an amplification curve. The capabilities of the software are enhanced by the implementation of algorithms unavailable in R, such as a 5-point stencil for derivative interpolation. Simulation tools, statistical tests, plots for data quality management, amplification efficiency/quantification cycle calculation, and datasets from qPCR and qIA experiments are part of the package. Core functionalities are integrated in GUIs (web-based and standalone shiny applications), thus streamlining analysis and report generation.Availability and implementation: http://cran.r-project.org/web/packages/chipPCR. Source code: https://github.com/michbur/chipPCR.Contact: stefan.roediger@b-tu.deSupplementary information: Supplementary data are available at Bioinformatics online.}, 
+URL = {http://bioinformatics.oxfordjournals.org/content/31/17/2900.abstract}, 
+eprint = {http://bioinformatics.oxfordjournals.org/content/31/17/2900.full.pdf+html}, 
+journal = {Bioinformatics} 
 }
 
 @Article{roediger_rkward_2012,
