--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Changes from Version 0.9-2 to 0.9-3 [July 12 2016]
+* migration to xml2 instead of XML
+* start migration from plyr to rlist
+
 Changes from Version 0.9-1 to 0.9-2 [September 09 2015]
 * GUI beta version
 * migration to checkmate instead of assertthat
