--- a/vignettes/RDML.bib
+++ b/vignettes/RDML.bib
@@ -141,6 +141,24 @@ Software},
   Shorttitle               = {Bioconductor}
 }
 
+@Article{george_development_2016,
+  Title                    = {Development of multiplex {PCR} systems for expression profiling of human cardiomyocytes induced to proliferate by lentivirus transduction of upcyte genes},
+  Author                   = {George, Sandra and Rödiger, Stefan and Schröder, Christian and Knaut, Michael and Küpper, Jan-Heiner},
+  Journal                  = {Journal of Cellular Biotechnology},
+  Year                     = {2016},
+
+  Month                    = jan,
+  Number                   = {1},
+  Pages                    = {35--55},
+  Volume                   = {2},
+
+  Abstract                 = {Severe heart diseases such as myocarditis and cardiomyopathy are often characterized by progressive damages of contractile heart tissue which ultimately can lead to terminal heart failure. There is a need for relevant in vitro cultures of human cardiomyocytes to study pathogenic processes and to perform pharmacological testing of new heart drugs. By using the upcyte/EPCC (enhanced primary cell culture) approach for direct multiplication of organ-specific cells, we established proliferating human cardiomyocyte cultures derived from atrial appendages. For qualitative cardiac expression profiling we established a comprehensive set of multiplex PCR assays, selected from a panel of 32 genes, to rapidly screen changes at the transcriptional level in human ventricular and atrial cardiomyocytes. Our multiplex PCR approach revealed some donor variability of native atrial heart tissue that need to be confirmed by further studies with more samples. Our initial studies further indicated that characteristic heart muscle cell markers such as MLC-2 a, MLC-2v, CHRM2, ADRB1, DES, EDRNB, Cx40 and KCNA5 were down-regulated when isolated cardiomyocytes were taken into primary cell culture. Compared to native heart tissue, proliferating atrial cardiomyocytes lacked expression of those cardiac markers but still expressed MYCD, GATA-4, Cx43, SERCA2, BNP, Tbx5, EDNRA and ACTB. Surprisingly, atrium-derived cardiomyocytes started to express NFAc4 in passage three, and cardiomyocyte marker expressions of Cx43 and BNP were even increased over cultivation time. In conclusion, our novel multiplex PCR assays should be useful for expression profiling of native heart tissues from patients with different disease conditions and for characterization of in vitro cardiomyocyte cultures.},
+  Doi                      = {10.3233/JCB-15025},
+  ISSN                     = {2352-3689},
+  Url                      = {http://content.iospress.com/articles/journal-of-cellular-biotechnology/jcb15025},
+  Urldate                  = {2016-09-16}
+}
+
 @Article{hellemans_2007,
   Title                    = {{qBase} relative quantification framework and software for management and automated analysis of real-time quantitative {PCR} data},
   Author                   = {Hellemans, Jan and Mortier, Geert and De Paepe, Anne and Speleman, Frank and Vandesompele, Jo},
@@ -316,6 +334,15 @@ Supplementary Information: Supplementary data are available at Bioinformatics on
   Url                      = {http://www.springer.com/statistics/computational+statistics/book/978-1-4614-7899-7}
 }
 
+@Manual{Mersmann_2014_microbenchmark,
+  Title                    = {{microbenchmark}: Accurate Timing Functions},
+  Author                   = {Olaf Mersmann, Claudia Beleites, Rainer Hurling and Ari Friedman},
+  Note                     = {R package version 1.4-2},
+  Year                     = {2014},
+
+  Url                      = {http://CRAN.R-project.org/package=microbenchmark}
+}
+
 @Article{pabinger_2014,
   Title                    = {A survey of tools for the analysis of quantitative {PCR} ({qPCR}) data},
   Author                   = {Pabinger, Stephan and R\"{o}diger, Stefan and Kriegner, Albert and Vierlinger, Klemens and Weinh\"{a}usel, Andreas},
@@ -359,18 +386,19 @@ Our comprehensive survey showed that most tools use their own file format and on
   Volume                   = {7}
 }
 
-@article{roediger2015chippcr,
-author = {R{\"o}diger, Stefan and Burdukiewicz, Micha{\l} and Schierack, Peter}, 
-title = {{chipPCR: an R package to pre-process raw data of amplification curves}},
-volume = {31}, 
-number = {17}, 
-pages = {2900-2902}, 
-year = {2015}, 
-doi = {10.1093/bioinformatics/btv205}, 
-abstract ={Motivation: Both the quantitative real-time polymerase chain reaction (qPCR) and quantitative isothermal amplification (qIA) are standard methods for nucleic acid quantification. Numerous real-time read-out technologies have been developed. Despite the continuous interest in amplification-based techniques, there are only few tools for pre-processing of amplification data. However, a transparent tool for precise control of raw data is indispensable in several scenarios, for example, during the development of new instruments.Results: chipPCR is an R package for the pre-processing and quality analysis of raw data of amplification curves. The package takes advantage of R’s S4 object model and offers an extensible environment. chipPCR contains tools for raw data exploration: normalization, baselining, imputation of missing values, a powerful wrapper for amplification curve smoothing and a function to detect the start and end of an amplification curve. The capabilities of the software are enhanced by the implementation of algorithms unavailable in R, such as a 5-point stencil for derivative interpolation. Simulation tools, statistical tests, plots for data quality management, amplification efficiency/quantification cycle calculation, and datasets from qPCR and qIA experiments are part of the package. Core functionalities are integrated in GUIs (web-based and standalone shiny applications), thus streamlining analysis and report generation.Availability and implementation: http://cran.r-project.org/web/packages/chipPCR. Source code: https://github.com/michbur/chipPCR.Contact: stefan.roediger@b-tu.deSupplementary information: Supplementary data are available at Bioinformatics online.}, 
-URL = {http://bioinformatics.oxfordjournals.org/content/31/17/2900.abstract}, 
-eprint = {http://bioinformatics.oxfordjournals.org/content/31/17/2900.full.pdf+html}, 
-journal = {Bioinformatics} 
+@Article{roediger2015chippcr,
+  Title                    = {{chipPCR: an R package to pre-process raw data of amplification curves}},
+  Author                   = {R{\"o}diger, Stefan and Burdukiewicz, Micha{\l} and Schierack, Peter},
+  Journal                  = {Bioinformatics},
+  Year                     = {2015},
+  Number                   = {17},
+  Pages                    = {2900-2902},
+  Volume                   = {31},
+
+  Abstract                 = {Motivation: Both the quantitative real-time polymerase chain reaction (qPCR) and quantitative isothermal amplification (qIA) are standard methods for nucleic acid quantification. Numerous real-time read-out technologies have been developed. Despite the continuous interest in amplification-based techniques, there are only few tools for pre-processing of amplification data. However, a transparent tool for precise control of raw data is indispensable in several scenarios, for example, during the development of new instruments.Results: chipPCR is an R package for the pre-processing and quality analysis of raw data of amplification curves. The package takes advantage of R’s S4 object model and offers an extensible environment. chipPCR contains tools for raw data exploration: normalization, baselining, imputation of missing values, a powerful wrapper for amplification curve smoothing and a function to detect the start and end of an amplification curve. The capabilities of the software are enhanced by the implementation of algorithms unavailable in R, such as a 5-point stencil for derivative interpolation. Simulation tools, statistical tests, plots for data quality management, amplification efficiency/quantification cycle calculation, and datasets from qPCR and qIA experiments are part of the package. Core functionalities are integrated in GUIs (web-based and standalone shiny applications), thus streamlining analysis and report generation.Availability and implementation: http://cran.r-project.org/web/packages/chipPCR. Source code: https://github.com/michbur/chipPCR.Contact: stefan.roediger@b-tu.deSupplementary information: Supplementary data are available at Bioinformatics online.},
+  Doi                      = {10.1093/bioinformatics/btv205},
+  Eprint                   = {http://bioinformatics.oxfordjournals.org/content/31/17/2900.full.pdf+html},
+  Url                      = {http://bioinformatics.oxfordjournals.org/content/31/17/2900.abstract}
 }
 
 @Article{roediger_rkward_2012,
@@ -412,6 +440,15 @@ journal = {Bioinformatics}
 
   Url                      = { 
 http://journal.r-project.org/archive/2013-2/roediger-bohm-schimke.pdf }
+}
+
+@Manual{Radford_2014_microbenchmark,
+  Title                    = {Inaccurate results from microbenchmark},
+  Author                   = {Neal Radford},
+  Note                     = {https://web.archive.org/web/20140823221902/http://www.r-bloggers.com/inaccurate-results-from-microbenchmark/},
+  Year                     = {2014},
+
+  Url                      = {https://web.archive.org/web/20140823221902/http://www.r-bloggers.com/inaccurate-results-from-microbenchmark/}
 }
 
 @Article{reed_high-resolution_2007,
@@ -706,21 +743,4 @@ Conclusions: The selection of a smoothing algorithm is an important step in deve
   Url                      = {http://onlinelibrary.wiley.com/doi/10.1002/humu.20951/abstract},
   Urldate                  = {2014-09-11}
 }
-
-  @Manual{Mersmann_2014_microbenchmark,
-    title = {{microbenchmark}: Accurate Timing Functions},
-    author = {Olaf Mersmann, Claudia Beleites, Rainer Hurling and Ari Friedman},
-    year = {2014},
-    note = {R package version 1.4-2},
-    url = {http://CRAN.R-project.org/package=microbenchmark},
-  }
-
-  @Manual{Radford_2014_microbenchmark,
-    title = {Inaccurate results from microbenchmark},
-    author = {Neal Radford},
-    year = {2014},
-    note = {https://web.archive.org/web/20140823221902/http://www.r-bloggers.com/inaccurate-results-from-microbenchmark/},
-    url = {https://web.archive.org/web/20140823221902/http://www.r-bloggers.com/inaccurate-results-from-microbenchmark/},
-  }
-
 
