--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Changes from Version 0.9-3 to 0.9-4 [October 20 2016]
+* vignettes corrected
+
 Changes from Version 0.9-2 to 0.9-3 [July 15 2016]
 * migration to xml2 instead of XML
 * start migration from plyr to rlist
