--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+Changes from Version 0.9-4 to 0.9-5 [December 08 2016]
+* CRAN version
+
 Changes from Version 0.9-3 to 0.9-4 [October 20 2016]
 * vignettes corrected
 
